--- a/main.tex
+++ b/main.tex
@@ -950,8 +950,8 @@ Therefore one obtains the action order by order as
 	S^{(3)}=&\int\dd^4x\left[(\pi^{ij}\dot{\gamma}_{ij}-\calN C^G)^{(3)}+(\pi_I\dot{\phi}^I)^{(3)}-\calN^{(0)}{C^\phi}^{(3)}-\calN^{(1)}{C^\phi}^{(2)} \right. \nonumber \\
 	&\qquad \left. -{\beta^i}^{(0)}({C_i^\phi}^{(3)}+{C_i^G}^{(3)})-{\beta^i}^{(1)}({C_i^\phi}^{(2)}+{C_i^G}^{(2)})\right] \nonumber \\
 	=&\int\dd^4x\left[\frac{3a^3\Mpl^2\calH^2}{\calN_\IR^4}\alpha^3-\frac{\Mpl^2}{2a\calN_\IR^2}\alpha[(\nabla^2\psi)^2-\psi_{ij}\psi_{ij}] \right. \nonumber \\
-	&\qquad-a^3\calN_\IR\left[\frac{1}{a^6}\Gamma^I_{JK}\dphi^K\partial_i\dphi_I\partial_i\dphi^K-\frac{1}{a^6}\Gamma^I_{JK}\Dpi_I\Dpi^J\dphi^K \right. \nonumber \\
-    &\quad\qquad
+	&\qquad-a^3\calN_\IR\left\{\frac{1}{a^2}\Gamma^I_{JK}\dphi^K\partial_i\dphi_I\partial_i\dphi^J-\frac{1}{a^6}\Gamma^I_{JK}\Dpi_I\Dpi^J\dphi^K \right. \nonumber \\
+    &\qquad\qquad
     -\frac{1}{a^6}\left(R_K{}^{IJ}{}_L+\Gamma^I_{KL,R}G^{JR}-\Gamma^I_{LS}\Gamma^S_{KR}G^{JR}+\Gamma^I_{RS}\Gamma^S_{KL}G^{JR}\right)\varpi_I\Dpi_J\dphi^K\dphi^L \nonumber \\
     &\qquad\qquad-\frac{1}{6a^6}\left(R_K{}^{IJ}{}_{L;M}+2\Gamma^S_{KL}R_S{}^{IJ}{}_M+4\Gamma^I_{SK}R_L{}^{JS}{}_M+\Gamma^I_{KL,MS}G^{JS} \right. \nonumber \\
     &\qquad\qquad\qquad+\Gamma^I_{KL,S}(5\Gamma^J_{MR}G^{RS}-\Gamma^S_{MR}G^{JR})
@@ -962,14 +962,14 @@ Therefore one obtains the action order by order as
     \left.+5\Gamma^I_{KL,S}\Gamma^J_{RM}G^{RS}
     +2\Gamma^I_{KS}\Gamma^S_{LR}(\Gamma^R_{MN}G^{JN}-4\Gamma^J_{MN}G^{RN})\right)\varpi_I\varpi_J\dphi^K\dphi^L\dphi^M \nonumber \\
     &\qquad\qquad
-    \left.+\frac{1}{6}\left(V_{I;JK}+3\Gamma^S_{IJ}V_{K;S}+(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{KR})V_S\right)\dphi^I\dphi^J\dphi^K\right]
+    \left.+\frac{1}{6}\left(V_{I;JK}+3\Gamma^S_{IJ}V_{K;S}+(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{KR})V_S\right)\dphi^I\dphi^J\dphi^K\right\}
 	\nonumber \\
-	&\qquad-a^3\alpha\left[\frac{1}{2a^6}\Dpi_I\Dpi^I+\frac{1}{2a^2}\partial_i\dphi^I\partial_i\dphi_I+\frac{1}{2}V_{I;J}\dphi^I\dphi^J
+	&\qquad-a^3\alpha\left\{\frac{1}{2a^6}\Dpi_I\Dpi^I+\frac{1}{2a^2}\partial_i\dphi^I\partial_i\dphi_I+\frac{1}{2}V_{I;J}\dphi^I\dphi^J
     -\frac{1}{2a^6}R_I{}^{JK}{}_L\varpi_J\varpi_K\dphi^I\dphi^L \right. \nonumber \\
     &\qquad\qquad
     \left.-\frac{1}{a^6}\Gamma^K_{IJ}\varpi^I\dphi^J\Dpi_K-\frac{1}{2a^6}(\Gamma^I_{KL,J}+\Gamma^I_{JS}\Gamma^S_{KL})\varpi_I\varpi^J\dphi^K\dphi^L
-    +\frac{1}{2}\Gamma^K_{IJ}V_K\dphi^I\dphi^J\right] \nonumber \\
-	&\left.-\frac{\psi_i}{a^2}\left[(\Dpi_I+\Gamma^K_{IJ}\varpi_K\dphi^J)\partial_i\dphi^I+\frac{4a^3\Mpl^2\calH}{\calN_\IR^3}\alpha\alpha_i+\frac{a\Mpl^2}{\calN_\IR^2}(\alpha_i\nabla^2\psi-\calN_\IR\alpha_j\psi_{ij})\right]\right].
+    +\frac{1}{2}\Gamma^K_{IJ}V_K\dphi^I\dphi^J\right\} \nonumber \\
+	&\qquad\left.-\frac{\psi_i}{a^2}\left\{(\Dpi_I+\Gamma^K_{IJ}\varpi_K\dphi^J)\partial_i\dphi^I+\frac{4a^3\Mpl^2\calH}{\calN_\IR^3}\alpha\alpha_i+\frac{a\Mpl^2}{\calN_\IR^2}(\alpha_i\nabla^2\psi-\calN_\IR\alpha_j\psi_{ij})\right\}\right].
 }
 
 To be compared with the standard perturbation theory, we hereafter impose the classical background EoM \YT{though it might not be good in the stochastic approach}
@@ -981,9 +981,14 @@ We then express the expansion in the covariant perturbations $Q^I$ and $\tilde{P
 \bae{
     \bce{
         \dps
-        {\dphi^I}^{[1]}=Q^I, \qquad {\dphi^I}^{[2]}=-\frac{1}{2}\Gamma^I_{JK}Q^JQ^K, \\
+        {\dphi^I}^{[1]}=Q^I, \\
         \dps
-        \Dpi_I^{[1]}=\tilde{P}_I, \qquad
+        {\dphi^I}^{[2]}=-\frac{1}{2}\Gamma^I_{JK}Q^JQ^K,
+    } \qquad
+    \bce{
+        \dps
+        \Dpi_I^{[1]}=\tilde{P}_I, \\
+        \dps
         \Dpi_I^{[2]}=\Gamma_{IJ}^K\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K,
     }
 }
@@ -1000,6 +1005,64 @@ the classical background EoM~(\ref{eq: classical bg EoM}). The quadratic action 
 	+\frac{2\Mpl^2\calH}{\calN_\IR^2}\frac{\nabla^2}{a^2}\psi^{[1]}\right)+\varpi_IQ^I\frac{\nabla^2}{a^2}\psi^{[1]} \right. \nonumber \\
 	&\left.-a^3\calN_\IR\left(\frac{1}{2a^6}\tilde{P}_I\tilde{P}^I-\frac{1}{2}Q_I\frac{\nabla^2}{a^2}Q^I+\frac{1}{2}V_{I;J}Q^IQ^J
 	-\frac{1}{2a^6}R_I{}^{JK}{}_L\varpi_J\varpi_KQ^IQ^L\right)+\tilde{P}_ID_tQ^I\right]
+}
+Its stationary condition gives
+\bae{\label{eq: 1st metric}
+    \bce{
+        \dps
+        \var{S^{(2),[2]}}{\alpha^{[1]}}=0, \\
+        \dps
+        \var{S^{(2),[2]}}{\psi^{[1]}}=0,
+    } \quad \Leftrightarrow \quad
+    \bce{
+        \dps
+        \alpha^{[1]}=\frac{\calN_\IR^2}{2a^3\Mpl^2\calH}\varpi_IQ^I, \\
+        \dps
+        \frac{\nabla^2}{a^2}\psi^{[1]}=-\frac{3\calN_\IR}{2a^3\Mpl^2}\varpi_IQ^I-\frac{\calN_\IR^2}{2a^6\Mpl^2\calH}\varpi^I\tilde{P}_I-\frac{\calN_\IR^2}{2\Mpl^2\calH}V_IQ^I.
+    }
+}
+The quadratic order solutions only appear in $S^{(2),[3]}$ up to the cubic order. But such terms are proportional to the linear stationary condition~(\ref{eq: 1st metric}) and therefore they vanish:
+\bae{
+    S^{(2),[3]}\supset&\int\dd^4x\left[-\alpha^{[2]}\left\{\frac{6a^3\Mpl^2\calH^2}{\calN_\IR^3}\alpha^{[1]}+a^3\left(\frac{1}{a^6}\varpi^I\tilde{P}_I+V_IQ^I+\frac{2\Mpl^2\calH}{\calN_\IR^2}\frac{\nabla^2}{a^2}\psi^{[1]}\right)\right\} \right. \nonumber \\
+    &\qquad\left.-\frac{\nabla^2}{a^2}\psi^{[2]}\left(\frac{2a^3\Mpl^2\calH}{\calN_\IR^2}\alpha^{[1]}-\varpi_IQ^I\right)\right]=0.
+}
+Accordingly we do not need the quadratic solutions for our interest actually. Also note that the linear solutions $\alpha^{[1]}$ and $\psi^{[1]}$ are already covariant and therefore the covariance of the cubic action should be restored only with the field perturbations $\dphi^I$ and $\Dpi_I$.
+
+Keeping them in mind, one can summarize the cubic action $S^{(2),[3]}$ and $S^{(3),[3]}$ as
+\bae{
+    S^{(2),[3]}=&\int\dd^4x\left[-a^3\alpha^{[1]}\left\{\frac{1}{a^6}\varpi^I\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)-\frac{1}{2}V_I\Gamma^I_{JK}Q^JQ^K\right\} \right. \nonumber \\
+    &-\frac{1}{2}\varpi_I\Gamma^I_{JK}Q^JQ^K\frac{\nabla^2}{a^2}\psi^{[1]}
+    -\frac{1}{2}\tilde{P}_ID_t(\Gamma^I_{JK}Q^JQ^K) \nonumber \\
+    &+\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)D_tQ^I \nonumber \\
+    &-a^3\calN_\IR\left\{\frac{1}{a^6}\tilde{P}^I\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)+\frac{1}{2}\Gamma^I_{JK}Q^JQ^K\frac{\nabla^2}{a^2}Q_I \right. \nonumber \\
+    &\qquad\left.\left.-\frac{1}{2}V_{I;J}\Gamma^J_{KL}Q^IQ^KQ^L+\frac{1}{2a^6}R_I{}^{JK}{}_L\Gamma^L_{MN}\varpi_J\varpi_KQ^IQ^MQ^N\right\}\right], \\
+    S^{(3),[3]}=&\int\dd^4x\left[\frac{3a^3\Mpl^2\calH^2}{\calN_\IR^4}{\alpha^{[1]}}^3-\frac{\Mpl^2}{2a\calN_\IR^2}\alpha^{[1]}[(\nabla^2\psi^{[1]})^2-\psi^{[1]}_{ij}\psi^{[1]}_{ij}] \right. \nonumber \\
+	&-a^3\calN_\IR\left\{-\frac{1}{2}\Gamma^I_{JK}Q^JQ^K\frac{\nabla^2}{a^2}Q_I-\frac{1}{a^6}\Gamma^I_{JK}\tilde{P}_I\tilde{P}^JQ^K \right. \nonumber \\
+    &\qquad
+    -\frac{1}{a^6}\left(R_K{}^{IJ}{}_L+\Gamma^I_{KL,R}G^{JR}-\Gamma^I_{LS}\Gamma^S_{KR}G^{JR}+\Gamma^I_{RS}\Gamma^S_{KL}G^{JR}\right)\varpi_I\tilde{P}_JQ^KQ^L \nonumber \\
+    &\qquad-\frac{1}{6a^6}\left(R_K{}^{IJ}{}_{L;M}+2\Gamma^S_{KL}R_S{}^{IJ}{}_M+4\Gamma^I_{SK}R_L{}^{JS}{}_M+\Gamma^I_{KL,MS}G^{JS} \right. \nonumber \\
+    &\qquad\qquad+\Gamma^I_{KL,S}(5\Gamma^J_{MR}G^{RS}-\Gamma^S_{MR}G^{JR})
+    -2(\Gamma^I_{KS,M}\Gamma^S_{LR}+\Gamma^I_{KS}\Gamma^S_{LR,M})G^{JR} \nonumber \\
+    &\qquad\qquad
+    +(\Gamma^I_{RS,K}\Gamma^S_{LM}+\Gamma^I_{RS}\Gamma^S_{LM,K})G^{JR}-\Gamma^I_{RS}\Gamma^S_{KL}\Gamma^R_{MN}G^{JN}-2\Gamma^I_{KS,L}\Gamma^J_{MR}G^{RS} \nonumber \\
+    &\qquad\qquad
+    \left.+5\Gamma^I_{KL,S}\Gamma^J_{RM}G^{RS}
+    +2\Gamma^I_{KS}\Gamma^S_{LR}(\Gamma^R_{MN}G^{JN}-4\Gamma^J_{MN}G^{RN})\right)\varpi_I\varpi_JQ^KQ^LQ^M \nonumber \\
+    &\qquad
+    \left.+\frac{1}{6}\left(V_{I;JK}+3\Gamma^S_{IJ}V_{K;S}+(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{KR})V_S\right)Q^IQ^JQ^K\right\}
+	\nonumber \\
+	&-a^3\alpha^{[1]}\left\{\frac{1}{2a^6}\tilde{P}_I\tilde{P}^I+\frac{1}{2a^2}\partial_iQ^I\partial_iQ_I+\frac{1}{2}V_{I;J}Q^IQ^J
+    -\frac{1}{2a^6}R_I{}^{JK}{}_L\varpi_J\varpi_KQ^IQ^L \right. \nonumber \\
+    &\qquad
+    \left.-\frac{1}{a^6}\Gamma^K_{IJ}\varpi^IQ^J\tilde{P}_K-\frac{1}{2a^6}(\Gamma^I_{KL,J}+\Gamma^I_{JS}\Gamma^S_{KL})\varpi_I\varpi^JQ^KQ^L
+    +\frac{1}{2}\Gamma^K_{IJ}V_KQ^IQ^J\right\} \nonumber \\
+	&\left.-\frac{\psi^{[1]}_i}{a^2}\left\{(\tilde{P}_I+\Gamma^K_{IJ}\varpi_KQ^J)\partial_iQ^I+\frac{4a^3\Mpl^2\calH}{\calN_\IR^3}\alpha^{[1]}\alpha^{[1]}_i+\frac{a\Mpl^2}{\calN_\IR^2}(\alpha^{[1]}_i\nabla^2\psi^{[1]}-\calN_\IR\alpha^{[1]}_j\psi^{[1]}_{ij})\right\}\right].
+}
+The full cubic action as their summation reads
+\bae{
+    S^{[3]}=&\int\dd^4x\left[\frac{3a^3\Mpl^2\calH^2}{\calN_\IR^4}{\alpha^{[1]}}^3+\frac{2a^3\Mpl^2\calH}{\calN_\IR^3}{\alpha^{[1]}}^2\frac{\nabla^2}{a^2}\psi^{[1]}+\frac{\Mpl^2}{2a\calN_\IR^2}\alpha^{[1]}((\nabla^2\psi^{[1]})^2-\psi^{[1]}_{ij}\psi^{[1]}_{ij}) \right. \nonumber \\
+    &-a^3\alpha^{[1]}\left(\frac{1}{2a^6}\tilde{P}_I\tilde{P}^I+\frac{1}{2a^2}\partial_iQ^I\partial_iQ_I+\frac{1}{2}V_{I;J}Q^IQ^J\right)-\frac{\psi^{[1]}_i}{a^2}\tilde{P}_I\partial_iQ^I \nonumber \\
+    &\left.\right].
 }
 
 
