--- a/main.tex
+++ b/main.tex
@@ -1069,7 +1069,7 @@ The full cubic action as their summation reads
 
 \subsection{Transport method}
 
-
+\bfe{width=\hsize}{fig/QPdef.pdf}{}{fig: QPdef}
 
 
 
