Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -806,6 +806,9 @@ Note that $\pi^{ij}\dot{\gamma}_{ij}$ and $\calN C^G$ can be simply summarized a
 	\pi^{ij}\dot{\gamma}_{ij}-\calN C^G=\frac{\Mpl^2}{2a\calN}\left[(\beta_{i,i})^2-\frac{1}{2}(\beta_{i,j}\beta_{i,j}+\beta_{i,j}\beta_{j,i})-6a^4\calH^2\right].
 }
 
+
+\subsection{Direct IR-UV decomposition}
+
 We then decompose the physical variables into the IR and UV modes:
 \bae{
     \phi^I=\varphi^I+\dphi^I, \qquad \pi_I=\varpi_I+\dpi_I, \qquad \calN=\calN_\IR+\alpha, \qquad \beta^i=0+a^{-2}\partial_i\psi.
@@ -1030,7 +1033,7 @@ Keeping them in mind, one can summarize the cubic action $S^{(2),[3]}$ and $S^{(
 \bae{
     S^{(2),[3]}=&\int\dd^4x\left[-a^3\alpha^{[1]}\left\{\frac{1}{a^6}\varpi^I\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)-\frac{1}{2}V_I\Gamma^I_{JK}Q^JQ^K\right\} \right. \nonumber \\
     &-\frac{1}{2}\varpi_I\Gamma^I_{JK}Q^JQ^K\frac{\nabla^2}{a^2}\psi^{[1]}
-    -\frac{1}{2}\tilde{P}_ID_t(\Gamma^I_{JK}Q^JQ^K) \nonumber \\
+    +\frac{1}{2}\Gamma^I_{JK}Q^JQ^KD_t\tilde{P}_I \nonumber \\
     &+\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)D_tQ^I \nonumber \\
     &-a^3\calN_\IR\left\{\frac{1}{a^6}\tilde{P}^I\left(\Gamma^K_{IJ}\tilde{P}_KQ^J+\frac{1}{2}(\Gamma^S_{IJ,K}+\Gamma^R_{IJ}\Gamma^S_{RK})\varpi_SQ^JQ^K\right)+\frac{1}{2}\Gamma^I_{JK}Q^JQ^K\frac{\nabla^2}{a^2}Q_I \right. \nonumber \\
     &\qquad\left.\left.-\frac{1}{2}V_{I;J}\Gamma^J_{KL}Q^IQ^KQ^L+\frac{1}{2a^6}R_I{}^{JK}{}_L\Gamma^L_{MN}\varpi_J\varpi_KQ^IQ^MQ^N\right\}\right], \\
@@ -1061,6 +1064,11 @@ The full cubic action as their summation reads
     &-a^3\alpha^{[1]}\left(\frac{1}{2a^6}\tilde{P}_I\tilde{P}^I+\frac{1}{2a^2}\partial_iQ^I\partial_iQ_I+\frac{1}{2}V_{I;J}Q^IQ^J\right)-\frac{\psi^{[1]}_i}{a^2}\tilde{P}_I\partial_iQ^I \nonumber \\
     &\left.-a^3\calN_\IR\left(\right)\right].
 }
+
+
+
+\subsection{Transport method}
+
 
 
 
