Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1069,6 +1069,12 @@ The full cubic action as their summation reads
 
 \subsection{Transport method}
 
+On general curved manifolds, the full fields $\phi^I$ and their IR modes $\varphi^I$ indicating different points span different (co)tangent spaces. That is why a mere difference between $\pi_I$ and $\varpi_I$, covectors at different points $\phi^I$ and $\varphi^I$, is not a covariant quantity.
+However vectors can be mapped to a different point by the parallel transport. Each term in the action is a scalar at $\phi^I$, which is conserved along this transport. Therefore the action can be written in terms of vectors at the IR point $\varphi^I$ and then its covariance will be much clearer.
+See Fig.~\ref{fig: OPdef} for our vector notations.
+
+
+
 \bfe{width=\hsize}{fig/QPdef.pdf}{}{fig: QPdef}
 
 
