Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1075,7 +1075,7 @@ See Fig.~\ref{fig: OPdef} for our vector notations.
 
 
 
-\bfe{width=\hsize}{fig/QPdef.pdf}{}{fig: QPdef}
+\bfe{width=\hsize}{fig/QPdef.pdf}{Schematic image of the definition of vectors. Each vector is mapped to the same color one by the parallel transport.}{fig: QPdef}
 
 
 
